<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20px"
    android:paddingRight="20px"
    tools:context=".mvp.view.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/hopxital_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/hospital_name"
            android:textColor="@color/title"
            android:textSize="24px"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20px"
        android:gravity="bottom"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/time_ymd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:singleLine="true"
            android:text="@string/time_ymd"
            android:textColor="@color/title"
            android:textSize="18px" />

        <TextView
            android:id="@+id/time_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:singleLine="true"
            android:text="@string/time_e"
            android:textColor="@color/title"
            android:textSize="18px" />


        <TextView
            android:id="@+id/time_hm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:singleLine="true"
            android:text="@string/time_hm"
            android:textColor="@color/title"
            android:textSize="24px"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/top_huli" />
    </LinearLayout>

    


</RelativeLayout>