<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <hospital.door.mvp.view.custom.Top
        android:id="@+id/top"
        android:layout_width="0dp"
        android:layout_height="88dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toBottomOf="@+id/top">


        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:background="@drawable/room_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="25dp"
                android:text="消化内科"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25px"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right|bottom"
                        android:paddingRight="10dp"
                        android:text="@string/room_num"
                        android:textColor="@color/num"
                        android:textSize="60px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right|bottom"
                        android:text="@string/room"
                        android:textColor="@color/white"
                        android:textSize="30px" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right|bottom"
                        android:paddingRight="10dp"
                        android:text="@string/bed_num"
                        android:textColor="@color/num"
                        android:textSize="50px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right|bottom"
                        android:text="@string/bed"
                        android:textColor="@color/white"
                        android:textSize="30px" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29px"
            android:layout_marginTop="18px"
            android:layout_marginBottom="18px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/marquee_icon"></ImageView>

            <WebView
                android:id="@+id/marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"></WebView>
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:layout_marginBottom="12px"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="14px"
        android:background="@drawable/down_btn"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/tr"
                android:drawableTop="@drawable/btn1"
                android:drawablePadding="10dp"
                android:text="@string/btn1"
                android:textColor="@color/title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/tr"
                android:drawableTop="@drawable/btn2"
                android:drawablePadding="10dp"
                android:text="@string/btn2"
                android:textColor="@color/title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/tr"
                android:drawableTop="@drawable/btn3"
                android:drawablePadding="10dp"
                android:text="@string/btn3"
                android:textColor="@color/title" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>